--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 </head>
 <body>
     <p>Esto es un test para aprender git y github</p>
+    <script src="script.js"></script>
+    <script src="script2.js"></script>
 </body>
 </html>
