--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <p>Esto es un test para aprender git y github</p>
     <script src="script.js"></script>
     <script src="script2.js"></script>
+    <script src="script3.js"></script>
 </body>
 </html>
